--- a/rest_crud/templates/registration/login.html
+++ b/rest_crud/templates/registration/login.html
@@ -6,10 +6,18 @@
         <title>Users</title>
     </head>
     <body>
-        <form action="" method="POST" enctype="multipart/form-data">
+        <form method="POST">
             {% csrf_token %}
             {{ form.as_p }}
-            <input type="submit" value="Submit">
+            <input type="submit" value="LOGIN">
+        {% if next %}
+            <input type="hidden" name="next" value={{ next }} />
+        {% else %}
+            <input type="hidden" name="next" value='/user/info/' />
+        {% endif %}
+        </form>
+        <form action="/user/" method="GET">
+            <input type="submit" value="SIGN UP">
         </form>
     </body>
 </html>
