everything except inquire and search

--- a/rest_crud/templates/registration/login.html
+++ b/rest_crud/templates/registration/login.html
@@ -1,5 +1,4 @@
 <!doctype html>
-{% comment %} {% load rest_framework %} {% endcomment %}
 <html lang="en">
     <head>
         <meta charset="utf-8">
@@ -19,5 +18,6 @@
         <form action="/user/" method="GET">
             <input type="submit" value="SIGN UP">
         </form>
+        <h1>{{users}}</h1>
     </body>
 </html>
