--- a/rest_crud/templates/properties.html
+++ b/rest_crud/templates/properties.html
@@ -6,15 +6,34 @@
         <title>Users</title>
     </head>
     <body>
-        <form action="/property/create/" method="POST" enctype="multipart/form-data">
-            {% csrf_token %}
-            {% for field in property_serial %}
-                {% if field.name != 'seller' %}
-                    {% render_field field style=style %}
-                {% endif %}
+        {% if not read_only %}
+            <form action="/property/create/" method="POST" enctype="multipart/form-data">
+                {% csrf_token %}
+                {% for field in property_serial %}
+                    {% if field.name != 'seller' %}
+                        {% render_field field style=style %}
+                    {% endif %}
+                {% endfor %}
+                <input name="image" type="file" multiple><br>
+                <input type="submit" value="Submit">
+            </form>
+        {% else %}
+            {% for obj in prop_objs %}
+                {% for key, value in obj.items %}
+                    {% if key != 'images' %}
+                        <p>{{key}}: {{value}}</p>
+                    {% else %}
+                        {% for img in obj.images %}
+                            <img src="{{img.image.url}}" height='42' width='42'>
+                        {% endfor %}
+                    {% endif %}
+                {% endfor %}
+                <form action='/inquiry/create/' method='GET'>
+                    <input type="submit" value="Enquire">
+                    <input type='hidden' name='pk' value='{{obj.id}}'>
+                </form>
             {% endfor %}
-            <input name="image" type="file" multiple><br>
-            <input type="submit" value="Submit">
-        </form>
+        {% endif %}
+
     </body>
 </html>
